==> gimasi/osG/board/STM32/L4/src/drivers/board-Gpio.c <==
#include "../../../../include/board/drivers/board-Gpio.h"
#include <osg.h>
#include <stm32l4xx_hal.h>

uint32_t _osg_board_gpio_getPull(const osg_GpioPull value)
{
    switch (value)
    {
        case OSG_GPIO_NOPULL: return GPIO_NOPULL;
        case OSG_GPIO_PULLUP: return GPIO_PULLUP;
        case OSG_GPIO_PULLDOWN: return GPIO_PULLDOWN;
        default:
            osg_error("ERROR: Invalid GPIO Pull.");
            break;
    }

    return 0xFFFFFFFF;
}

uint32_t _osg_board_gpio_getSpeed(const osg_GpioSpeed value)
{
    switch (value)
    {
        case OSG_GPIO_SPEED_FREQ_LOW: return GPIO_SPEED_FREQ_LOW;
        case OSG_GPIO_SPEED_FREQ_MEDIUM: return GPIO_SPEED_FREQ_MEDIUM;
        case OSG_GPIO_SPEED_FREQ_HIGH: return GPIO_SPEED_FREQ_HIGH;
        case OSG_GPIO_SPEED_FREQ_VERY_HIGH: return GPIO_SPEED_FREQ_VERY_HIGH;
        default:
            osg_error("ERROR: Invalid GPIO Speed.");
            break;

    }

    return 0xFFFFFFFF;
}

uint32_t _osg_board_gpio_getAlternate(const osg_GpioAlternateFunction value)
{
    switch (value)
    {
        case OSG_GPIO_ALTERNATE_DEFAULT: return 0;
        case OSG_GPIO_ALTERNATE_I2C1: return GPIO_AF4_I2C1;
        case OSG_GPIO_ALTERNATE_I2C2: return GPIO_AF4_I2C2;
        case OSG_GPIO_ALTERNATE_I2C3: return GPIO_AF4_I2C3;
        case OSG_GPIO_ALTERNATE_SPI1: return GPIO_AF5_SPI1;
        case OSG_GPIO_ALTERNATE_SPI2: return GPIO_AF5_SPI2;
        case OSG_GPIO_ALTERNATE_SPI3: return GPIO_AF6_SPI3;
        case OSG_GPIO_ALTERNATE_UART0: return GPIO_AF8_LPUART1;
        case OSG_GPIO_ALTERNATE_UART1: return GPIO_AF7_USART1;
        case OSG_GPIO_ALTERNATE_UART2: return GPIO_AF7_USART2;
        case OSG_GPIO_ALTERNATE_UART3: return GPIO_AF7_USART3;
        case OSG_GPIO_ALTERNATE_UART4: return GPIO_AF8_UART4;
        case OSG_GPIO_ALTERNATE_UART5: return GPIO_AF8_UART5;
        default:
            osg_error("ERROR: Invalid GPIO Alternate Function.");
            break;
    }

    return 0xFFFFFFFF;
}

IRQn_Type _osg_board_gpio_getIrqType(const osg_GpioPin pin)
{
    switch (pin)
    {
        case OSG_GPIO_PIN_0:
	    	return EXTI0_IRQn;
        case OSG_GPIO_PIN_1:
            return EXTI1_IRQn;
        case OSG_GPIO_PIN_2:
	    	return EXTI2_IRQn;
        case OSG_GPIO_PIN_3:
            return EXTI3_IRQn;
        case OSG_GPIO_PIN_4:
            return EXTI4_IRQn;
        case OSG_GPIO_PIN_5:
        case OSG_GPIO_PIN_6:
        case OSG_GPIO_PIN_7:
        case OSG_GPIO_PIN_8:
        case OSG_GPIO_PIN_9:
            return EXTI9_5_IRQn;
        case OSG_GPIO_PIN_10:
        case OSG_GPIO_PIN_11:
        case OSG_GPIO_PIN_12:
        case OSG_GPIO_PIN_13:
        case OSG_GPIO_PIN_14:
        case OSG_GPIO_PIN_15:
            return EXTI15_10_IRQn;
        default:
            osg_error("ERROR: Impossible to enable EXT Interrtupt; invalid Pin.");
            break;
    }

    // suppress warning
    return EXTI0_IRQn;
}

void _osg_board_gpio_enablePort(osg_GpioPort port)
{
    switch (port)
    {
#ifdef GPIOA
        case OSG_GPIO_PORT_A: __HAL_RCC_GPIOA_CLK_ENABLE(); break;
#endif
#ifdef GPIOB
        case OSG_GPIO_PORT_B: __HAL_RCC_GPIOB_CLK_ENABLE(); break;
#endif
#ifdef GPIOC
        case OSG_GPIO_PORT_C: __HAL_RCC_GPIOC_CLK_ENABLE(); break;
#endif
#ifdef GPIOD
        case OSG_GPIO_PORT_D: __HAL_RCC_GPIOD_CLK_ENABLE(); break;
#endif
#ifdef GPIOE
        case OSG_GPIO_PORT_E: __HAL_RCC_GPIOE_CLK_ENABLE(); break;
#endif
#ifdef GPIOF
        case OSG_GPIO_PORT_F: __HAL_RCC_GPIOF_CLK_ENABLE(); break;
#endif
#ifdef GPIOG
        case OSG_GPIO_PORT_G: __HAL_RCC_GPIOG_CLK_ENABLE(); break;
#endif
#ifdef GPIOH
        case OSG_GPIO_PORT_H: __HAL_RCC_GPIOH_CLK_ENABLE(); break;
#endif
#ifdef GPIOI
        case OSG_GPIO_PORT_I: __HAL_RCC_GPIOI_CLK_ENABLE(); break;
#endif
        default:
            osg_error("ERROR: Invalid GPIO Port in GPIO initialization.");
            break;
    }
}

void osg_board_gpio_ctor(
    osg_Gpio * self,
    const osg_GpioId id,
    const osg_GpioMode mode,
    const osg_GpioPull pull,
    const osg_GpioSpeed speed,
    const osg_GpioAlternateFunction alternate)
{
    if (osg_board_gpio_checkPin(id) == FALSE)
    {
        osg_error("PIN Unavailable on this board.");
        return;
    }

    GPIO_InitTypeDef config = {0};
    config.Pin = _osg_board_gpio_getBoardGpioPin(osg_gpio_getPin(id));
    config.Mode = _osg_board_gpio_getMode(mode);
    config.Pull = _osg_board_gpio_getPull(pull);
    config.Speed = _osg_board_gpio_getSpeed(speed);
    // @todo Check in debug that alternate is valid for given pin
    config.Alternate = _osg_board_gpio_getAlternate(alternate);

    const osg_GpioPort port = osg_gpio_getPort(id);
    self->handler = _osg_board_gpio_getPortHandler(port);

    _osg_board_gpio_enablePort(port);

    HAL_GPIO_Init((osg_board_Gpio *)self->handler, &config);
}

void osg_board_gpio_dtor(osg_Gpio * self)
{
    HAL_GPIO_DeInit(self->handler, _osg_board_gpio_getBoardGpioPin(osg_gpio_getPin(self->id)));
}

Bool osg_board_gpio_checkPin(osg_GpioId id)
{
    // From STM32L476xx data sheet:
    // DM00108832 (DocID025976 Rev 4), Figure 9, pag. 59/232
    switch (id)
    {
        case OSG_GPIO_PA0:
        case OSG_GPIO_PA1:
        case OSG_GPIO_PA2:
        case OSG_GPIO_PA3:
        case OSG_GPIO_PA4:
        case OSG_GPIO_PA5:
        case OSG_GPIO_PA6:
        case OSG_GPIO_PA7:
        case OSG_GPIO_PA8:
        case OSG_GPIO_PA9:
        case OSG_GPIO_PA10:
        case OSG_GPIO_PA11:
        case OSG_GPIO_PA12:
        case OSG_GPIO_PA13:
        case OSG_GPIO_PA14:
        case OSG_GPIO_PA15:
        case OSG_GPIO_PB0:
        case OSG_GPIO_PB1:
        case OSG_GPIO_PB2:
        case OSG_GPIO_PB3:
        case OSG_GPIO_PB4:
        case OSG_GPIO_PB5:
        case OSG_GPIO_PB6:
        case OSG_GPIO_PB7:
        case OSG_GPIO_PB8:
        case OSG_GPIO_PB9:
        case OSG_GPIO_PB10:
        case OSG_GPIO_PB11:
        case OSG_GPIO_PB12:
        case OSG_GPIO_PB13:
        case OSG_GPIO_PB14:
        case OSG_GPIO_PB15:
        case OSG_GPIO_PC0:
        case OSG_GPIO_PC1:
        case OSG_GPIO_PC2:
        case OSG_GPIO_PC3:
        case OSG_GPIO_PC4:
        case OSG_GPIO_PC5:
        case OSG_GPIO_PC6:
        case OSG_GPIO_PC7:
        case OSG_GPIO_PC8:
        case OSG_GPIO_PC9:
        case OSG_GPIO_PC10:
        case OSG_GPIO_PC11:
        case OSG_GPIO_PC12:
        case OSG_GPIO_PC13:
        case OSG_GPIO_PC14:
        case OSG_GPIO_PC15:
        case OSG_GPIO_PD2:
        case OSG_GPIO_PH0:
        case OSG_GPIO_PH1:
            return TRUE;
        default:
            return FALSE;
    }
}

Bool osg_board_gpio_read(osg_Gpio * self)
{
    GPIO_PinState readState = HAL_GPIO_ReadPin((osg_board_Gpio *)self->handler, _osg_board_gpio_getBoardGpioPin(osg_gpio_getPin(self->id)));
    if (readState == GPIO_PIN_RESET)
        return FALSE;
    else
        return TRUE;
}

void osg_board_gpio_write(osg_Gpio * self, const Bool value)
{
    GPIO_PinState writeState = GPIO_PIN_RESET;
    if (value == TRUE)
        writeState = GPIO_PIN_SET;
    HAL_GPIO_WritePin((osg_board_Gpio *)self->handler, _osg_board_gpio_getBoardGpioPin(osg_gpio_getPin(self->id)), writeState);
}

void osg_board_gpio_toggle(osg_Gpio * self)
{
    HAL_GPIO_TogglePin((osg_board_Gpio *)self->handler, _osg_board_gpio_getBoardGpioPin(osg_gpio_getPin(self->id)));
}

Bool osg_board_gpio_lock(osg_Gpio * self)
{
    if (HAL_GPIO_LockPin((osg_board_Gpio *)self->handler, _osg_board_gpio_getBoardGpioPin(osg_gpio_getPin(self->id))) == HAL_OK)
        return TRUE;

    return FALSE;
}
